--- a/server/package.json
+++ b/server/package.json
@@ -3,18 +3,26 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
-    "fastify": "^4.12.0"
+    "dayjs": "^1.11.7",
+    "fastify": "^4.12.0",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "prisma": "^4.9.0",
+    "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
