--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,16 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@prisma/client": "^4.9.0",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "express": "^4.18.2",
     "fastify": "^4.12.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.3.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "prisma": "^4.9.0",
     "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
